@@ -8,7 +8,12 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog] an
 
 === Added ===
 
+* Sockets can now send messages asynchronously via `Socket::send_async`.
+
 === Changed ===
+
+* The majority of types are now at the root of the crate rather than a module.
+* Asynchronous sending on a context is now via `Context::send` rather than `Aio::send`.
 
 === Deprecated ===
 
